--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
-  "name": "fcc-api-projects-boilerplate",
+  "name": "timestamp",
   "version": "0.0.1",
   "description": "An FCC Backend Challenge",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "nodemon index.js"
   },
   "dependencies": {
-    "express": "^4.12.4",
-    "cors": "^2.8.0"
+    "cors": "^2.8.0",
+    "express": "^4.12.4"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/freeCodeCamp/boilerplate-project-timestamp.git"
+    "url": "git+https://github.com/freeCodeCamp/boilerplate-project-timestamp.git"
   },
   "bugs": {
     "url": "https://github.com/freeCodeCamp/freeCodeCamp/issues"
@@ -24,5 +24,8 @@
     "express",
     "freeCodeCamp"
   ],
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "nodemon": "^2.0.20"
+  }
 }
